--- a/systemd/user/ff-suspend.service
+++ b/systemd/user/ff-suspend.service
@@ -1,11 +1,11 @@
 [Unit]
-After=xorg.target
+After=xorg.target background.target
 
 [Service]
 Type=exec
 SyslogIdentifier=%p
 ExecStart=dash -c '\
-	sd() { systemctl -q --user $1 waterfox.scope; }; \
+	sd() { echo "waterfox $1"; systemctl -q --user $1 waterfox.scope; }; \
 	while :; do xdpms wait || exit 1; sleep 5; xdpms check || { \
 		sd is-active && sd freeze && thaw=t || thaw=; \
 		xiwait || exit 1; [ -z "$thaw" ] || sd thaw; }; done'
