--- a/conky/rc.desktop
+++ b/conky/rc.desktop
@@ -38,6 +38,7 @@ conky.config = {
 
 	no_buffers = true,
 	uppercase = false,
+	short_units = true,
 	cpu_avg_samples = 2,
 	net_avg_samples = 2,
 	use_spacer = 'none',
@@ -51,10 +52,6 @@ conky.config = {
 	template2 = '$color ${tcp_portmon \\1 \\2 rhost \\3} ${alignr} ${tcp_portmon \\1 \\2 \\4 \\3} $color',
 	template3 = '${color lightgrey}${if_empty ${lua sens_read \\2}}${else}${if_match ${lua sens_read \\2} > \\3}${color red}\\1: ${lua sens_read \\2}C${blink !!!}${else}\\1: ${color}${lua sens_read \\2}C${endif}${endif}',
 	template4 = '${color lightgrey}${if_match $\\3perc >= \\1}${color red}${endif}\\4 ${lua_parse rings_marker \\3}${tab 25}$color${if_match $\\3perc >= \\1}${color red}${endif}$\\3/$\\3max - $\\3perc%${tab 60}${color light slate gray}${if_match $\\3perc >= \\2}${color maroon}${endif}${if_match $\\3perc >= \\1}${color red}${endif}${\\3bar}',
-	template5 = '${color darkred}${if_up \\1}${color\\2}${endif}${addr \\1}${color lightgrey}',
-	template6 = '${color\\2}${downspeedgraph \\1 30,190 aa3333 3333aa 0 -t -l}${alignr}${color\\2}${upspeedgraph \\1 30,190 3333aa aa3333 0 -t -l}',
-	template7 = '${color\\2}${downspeed \\1}${color lightgrey}',
-	template8 = '${color\\2}${upspeed \\1}${color lightgrey}',
 	template9 = '${color light slate gray}${if_match ${cpu cpu\\1} >= 85}${color red}${endif}${tab 7}${cpubar cpu\\1 5,60}',
 
 	lua_load = '~/.conkyrc.rings.lua',
@@ -107,23 +104,18 @@ ${template1 vms /srv/vms 20}
 ${template1 games /home/player 10}
 ${template1 media /mnt/win-500 5}
 ${template1 tmp /tmp 30}
-${color lightgrey}FS_read: ${color #99aaff}${diskio_read}\
-  ${color lightgrey}FS_write: ${color #ffaa99}${diskio_write}\
+${color lightgrey}FS read: ${color #99aaff}${diskio_read}\
+  ${color lightgrey}write: ${color #ffaa99}${diskio_write}\
 ${alignr}${color light slate gray}${top_io pid 1} ${top_io name 1}
 ${color light slate gray}${diskiograph /dev/sda 30,400 3333aa aa3333 0 -t -l}
 \
-$color$stippled_hr
-${color lightgrey}Net_leech: ${template7 wlan0 0} / ${template7 enp3s0 1} ${lua_parse rings_marker net_down}${color lightgrey} / ${template7 ppp0 2}\
-${alignr}${color lightgrey}Net_seed: ${template8 wlan0 0} / ${template8 enp3s0 1} ${lua_parse rings_marker net_up}${color lightgrey} / ${template8 ppp0 2}
+${color lightgrey}IPs [ ${lua_parse iface_list core wlp2s0 wlan_usb vde}${color lightgrey} ]: \
+${lua_parse iface_ips core wlp2s0 wlan_usb vde}${lua_parse iface_wlan_info wlp2s0 wlan_usb}
 \
-${if_up wlan0}${template6 wlan0 0}
-${endif}${if_up enp3s0}${template6 enp3s0 1}
-${endif}${if_up ppp0}${template6 ppp0 2}
-${endif}\
+${color lightgrey}Net IN: ${lua_parse iface_num downspeed core wlp2s0 wlan_usb vde} ${lua_parse rings_marker net_down}\
+${alignr}${color lightgrey}Net OUT: ${lua_parse iface_num upspeed core wlp2s0 wlan_usb vde} ${lua_parse rings_marker net_up}
+${lua_parse iface_graph wlan0 wlp2s0 enp3s0}
 \
-${color lightgrey}IPs: ${template5 core 0} / ${template5 wlan_usb 1} / ${template5 vde 2}\
-${if_up wlan_usb}${alignr}${color lightgrey}Signal:$color ${wireless_link_qual_perc wlan_usb}%\
- (${wireless_essid wlan_usb}, ${wireless_bitrate wlan_usb})${endif}
 # \
 # $color$stippled_hr
 # ${color #ddaa00}Ports${alignr}Conns
