--- a/conky/rc.desktop
+++ b/conky/rc.desktop
@@ -19,7 +19,7 @@ conky.config = {
 	gap_x = 10,
 	gap_y = 10,
 
-	font = 'Luxi Sans:size=8',
+	font = 'Liberation Sans:size=8',
 	use_xft = true,
 	xftalpha = 1,
 	override_utf8_locale = true,
@@ -49,15 +49,15 @@ conky.config = {
 	color2 = '4444cc',
 
 	template0 = '${color \\1}${top cpu \\2}${goto 40}${top mem \\2}${goto 80}${top pid \\2}${goto 130}${top name \\2}${goto 200}${top_mem cpu \\2}${goto 235}${top_mem mem \\2}${goto 275}${top_mem pid \\2}${alignr}${top_mem name \\2}$color',
-	template1 = '${if_mounted \\2}${color lightgrey}\\1 ${lua_parse rings_marker fs_\\1}${tab 60 1}$color${if_match ${fs_free_perc \\2} <= \\3}${color red}${endif}${fs_free \\2} (${fs_free_perc \\2}%)${if_match ${fs_free_perc \\2} <= \\3}${blink !!!!!}${endif}${tab 90}${fs_bar \\2}$color${endif}',
+	template1 = '${if_mounted \\2}${color lightgrey}\\1 ${lua_parse rings_marker fs_\\1}${goto 50}$color${if_match ${fs_free_perc \\2} <= \\3}${color red}${endif}${fs_free \\2} (${fs_free_perc \\2}%)${if_match ${fs_free_perc \\2} <= \\3}${blink !!!!!}${endif}${goto 120}${fs_bar \\2}$color${endif}',
 	template2 = '$color ${tcp_portmon \\1 \\2 rhost \\3} ${alignr} ${tcp_portmon \\1 \\2 \\4 \\3} $color',
 	template3 = '${color lightgrey}${if_empty ${lua sens_read \\2}}${else}${if_match ${lua sens_read \\2} > \\3}${color red}\\1: ${lua sens_read \\2}C${blink !!!}${else}\\1: ${color}${lua sens_read \\2}C${endif}${endif}',
-	template4 = '${color lightgrey}${if_match $\\3perc >= \\1}${color red}${endif}\\4 ${lua_parse rings_marker \\3}${tab 25}$color${if_match $\\3perc >= \\1}${color red}${endif}$\\3/$\\3max - $\\3perc%${tab 60}${color light slate gray}${if_match $\\3perc >= \\2}${color maroon}${endif}${if_match $\\3perc >= \\1}${color red}${endif}${\\3bar}',
+	template4 = '${color lightgrey}${if_match $\\3perc >= \\1}${color red}${endif}\\4 ${lua_parse rings_marker \\3}${goto 45}$color${if_match $\\3perc >= \\1}${color red}${endif}$\\3 / $\\3max - $\\3perc%${goto 160}${color light slate gray}${if_match $\\3perc >= \\2}${color maroon}${endif}${if_match $\\3perc >= \\1}${color red}${endif}${\\3bar}',
 	template5 = '${if_up \\1}${downspeedgraph \\1 30,190 aa3333 3333aa \\2 -t -l}${alignr}${upspeedgraph \\1 30,190 3333aa aa3333 \\2 -t -l}${endif}',
 	template9 = '${color light slate gray}${if_match ${cpu cpu\\1} >= 85}${color red}${endif}${tab 7}${cpubar cpu\\1 5,60}',
 
 	lua_load = '~/.conkyrc.lua',
-	lua_draw_hook_pre = 'rings_draw',
+	lua_draw_hook_pre = 'draw_graphics',
 
 	-- max_user_text = 10485760,
 	text_buffer_size = 18432,
@@ -116,7 +116,7 @@ ${diskiograph /dev/disk/by-id/wwn-0x5001b444a75849ed 30,133 3333aa aa3333 0 -t -
 ${diskiograph /dev/disk/by-id/wwn-0x50014ee65732acb6 30,133 3333aa aa3333 0 -t -l}\
 $color${voffset 5}${goto 9}root${goto 140}vms/games${goto 273}dump${voffset -10}
 \
-${color lightgrey}IPs [ ${lua_parse iface_list core wlan_usb vde enp3s0 wlp2s0}${color lightgrey} ]: \
+${color lightgrey}IPs ${color #888}[ ${lua_parse iface_list core wlan_usb vde enp3s0 wlp2s0} ${color #888}]$color: \
 ${lua_parse iface_ips core wlp2s0 wlan_usb vde}${lua_parse iface_wlan_info wlp2s0 wlan_usb}
 \
 ${color lightgrey}Net IN: ${lua_parse iface_num downspeed core wlan_usb vde enp3s0 wlp2s0}\
