systemd.user.ff-suspend: remove echo's - systemd-257 logs freeze/thaw events on its own

--- a/systemd/user/ff-suspend.service
+++ b/systemd/user/ff-suspend.service
@@ -5,7 +5,7 @@ After=xorg.target background.target
 Type=exec
 SyslogIdentifier=%p
 ExecStart=dash -c '\
-	sd() { echo "--- $1 ---"; systemctl -q --user $1 waterfox.scope; }; \
+	sd() { systemctl -q --user $1 waterfox.scope; }; \
 	while :; do xdpms wait || exit 1; sleep 5; xdpms check || { \
 		sd is-active && sd freeze && thaw=t || thaw=; \
 		xiwait || exit 1; [ -z "$thaw" ] || sd thaw; }; done'
