--- a/conky/rc.desktop
+++ b/conky/rc.desktop
@@ -51,7 +51,7 @@ conky.config = {
 	template0 = '${color \\1}${top cpu \\2}${goto 40}${top mem \\2}${goto 80}${top pid \\2}${goto 130}${top name \\2}${goto 200}${top_mem cpu \\2}${goto 235}${top_mem mem \\2}${goto 275}${top_mem pid \\2}${alignr}${top_mem name \\2}$color',
 	template1 = '${if_mounted \\2}${color lightgrey}\\1 ${lua_parse rings_marker fs_\\1}${goto 50}$color${if_match ${fs_free_perc \\2} <= \\3}${color red}${endif}${fs_free \\2} (${fs_free_perc \\2}%)${if_match ${fs_free_perc \\2} <= \\3}${blink !!!!!}${endif}${goto 120}${fs_bar \\2}$color${endif}',
 	template2 = '$color ${tcp_portmon \\1 \\2 rhost \\3} ${alignr} ${tcp_portmon \\1 \\2 \\4 \\3} $color',
-	template3 = '${color lightgrey}${if_empty ${lua sens_read \\2}}${else}${if_match ${lua sens_read \\2} > \\3}${color red}\\1: ${lua sens_read \\2}C${blink !!!}${else}\\1: ${color}${lua sens_read \\2}C${endif}${endif}',
+	template3 = '${color lightgrey}${if_empty ${lua sens_read \\2}}${else}${if_match ${lua sens_read \\2} > \\3}${color red}\\1: ${lua sens_read \\2}\\4${blink !!!}${else}\\1: ${color}${lua sens_read \\2}\\4${endif}${endif}',
 	template4 = '${color lightgrey}${if_match $\\3perc >= \\1}${color red}${endif}\\4 ${lua_parse rings_marker \\3}${goto 45}$color${if_match $\\3perc >= \\1}${color red}${endif}$\\3 / $\\3max - $\\3perc%${goto 160}${color light slate gray}${if_match $\\3perc >= \\2}${color maroon}${endif}${if_match $\\3perc >= \\1}${color red}${endif}${\\3bar}',
 	template5 = '${if_up \\1}${downspeedgraph \\1 30,190 aa3333 3333aa \\2 -t -l}${alignr}${upspeedgraph \\1 30,190 3333aa aa3333 \\2 -t -l}${endif}',
 	template9 = '${color light slate gray}${if_match ${cpu cpu\\1} >= 85}${color red}${endif}${tab 7}${cpubar cpu\\1 5,60}',
@@ -84,7 +84,8 @@ ${template4 80 60 swap Swap}
 ${color lightgrey}Processes:$color $processes  \
 ${color lightgrey}Running:$color $running_processes\
 ${alignr}\
-${template3 cpu k10temp-0-c3__temp1_input 68}\
+${template3 cpu k10temp-pci-00c3__Tctl__temp1_input 68 C}\
+, ${template3 gpu-fan i915-pci-0a00__fan1__fan1_input 1000 \ rpm}\
 ${if_empty ${lua file_cap_read Apple Wireless}}${else}${color lightgrey}, kb_batt: ${color}${lua file_cap_read Apple Wireless}${endif}
 ${color light slate gray}${cpugraph cpu0 20,400 0000ff 00ff00 -t -l}
 \
