systemd.user.ff-suspend: use fallback-delay with "xdpms wait" command

--- a/systemd/user/ff-suspend.service
+++ b/systemd/user/ff-suspend.service
@@ -6,7 +6,7 @@ Type=exec
 SyslogIdentifier=%p
 ExecStart=dash -c '\
 	sd() { systemctl -q --user $1 waterfox.scope; }; \
-	while :; do xdpms wait || exit 1; sleep 5; xdpms check || { \
+	while :; do xdpms wait 300 || exit 1; sleep 5; xdpms check || { \
 		sd is-active && sd freeze && thaw=t || thaw=; \
 		xiwait || exit 1; [ -z "$thaw" ] || sd thaw; }; done'
 
